# fishes

./: .gitignore  Cargo.toml  README.md
html/: build.js  template.html  words.html
src/: main.rs  text.rs
