[package]
name = "weirdfishes"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkano = "0.34"
vulkano-shaders = "0.34"
png = "0.17"
rand = "0.8"
bytemuck = "1.19"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusttype = { version = "0.9", features = ["gpu_cache"] }
memoize = "0.4.2"
